Added Methods and Plan
Completed the Methods and Planning step

--- a/ipps_gunhvir_group3.ipynb
+++ b/ipps_gunhvir_group3.ipynb
@@ -1914,8 +1914,40 @@
     "**Methods and Plan**\n",
     "In order to address the question of \"Can age and the number of hours played predict a user's experience level?\", I will use a k-Nearest Neighbors (k-NN) classification model. This method aligns well with the structure of the dataset, the type of outcome, and the sample size. \n",
     "\n",
-    "I believe that this is the most suitable method because the outcome variable, experience level, is categorical, and the predictors are numeric. Because k-NN does not need a relationship between predictors and the outcome, it is suitable for this problem. "
+    "I believe that this is the most suitable method because the outcome variable, experience level, is categorical, and the predictors are numeric. Because k-NN does not need a relationship between predictors and the outcome, it is suitable for this problem. Additionally, the number of observations, 196, is suitable for k-NN.\n",
+    "\n",
+    "k-NN requires very few formal statistical assumptions. The main considerations are:\n",
+    "\n",
+    "- Distance meaningfully reflects similarity: Users who are closer in age and in the number of hours played should plausibly have similar experience levels.\n",
+    "- Variables should be on comparable scales, otherwise one variable can dominate the distance calculation. Standardization will address this.\n",
+    "- No strong outliers, since k-NN predictions are sensitive to points that sit far from the main clusters.\n",
+    "- Unlike logistic regression, k-NN does not assume linearity, normality, or independence of residuals.\n",
+    "\n",
+    "k-NN can perform poorly if:\n",
+    "\n",
+    "- The predictors are not scaled (because distance becomes misleading).\n",
+    "- There is high noise or many irrelevant features (not a problem in this dataset).\n",
+    "- The value of k is poorly chosen. A small k can overfit, while a large k can oversmooth important class boundaries.\n",
+    "- Class imbalance exists. If one experience level dominates the dataset, k-NN may bias predictions toward that category.\n",
+    "\n",
+    "I will evaluate the model using repeated cross-validation. Using tidymodels, I will tune the hyperparameter k across a range of values (e.g., k = 1 to 25) and compare performance based on:\n",
+    "- Accuracy\n",
+    "- Balanced accuracy (if classes are imbalanced)\n",
+    "- The chosen model will be the one that provides the highest cross-validated performance without signs of overfitting.\n",
+    "\n",
+    "Before modelling, I will:\n",
+    "\n",
+    "Split the data into a training set with a 75/25% split (75% training and 25% testing)\n",
+    "Apply a recipe that standardizes predictors using step_scale() and step_center(), since k-NN requires scaling, encodes the categorical outcome with step_dummy() if necessary (depending on the engine), use 10-fold cross-validation inside the training set to tune the hyperparameter k. After selecting the best k, I will fit the final model to the full training set and evaluate its performance on the testing set. This workflow ensures a fair and unbiased estimate of how well age and played_hours can predict a user’s experience level."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9415f82e-fe99-409b-90c0-51265586dffa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
